BSL update, change JVM flags